@@ -200,6 +200,7 @@ Fixes:
    * Fix ctxpopup geometry when parent is an elm_win.
    * Quit the scroll animator if the scroller don't have a bounce and reach a edge.
    * Fix the scroller show by a page if the page size is set and the region_bring_in or region_show is called.
+   * Fix elc_player crash issue.
 
 Removals:
 
